Refactor: test code fixture 적용 (#84)
* Refactor: test code fixture 적용
- entity 생성 시 fixture의 static method를 사용해 생성으로 변경

* Fix: sonarqube-scan-action 인수 전달 방식 변경
-  | 를 > 으로 변경
 #83